--- a/Group-Video/OpenVideoCall-Web/src/pages/meeting/meeting.html
+++ b/Group-Video/OpenVideoCall-Web/src/pages/meeting/meeting.html
@@ -22,40 +22,46 @@
       </div>
     </div>
     <div class="ag-main">
-      <div class="ag-container" id="ag-canvas">
+      <div class="flex-container">
+        <div class="ag-container" id="ag-canvas">
 
-        <!-- btn group -->
-        <div class="ag-btn-group">
-          <span class="ag-btn exitBtn" title="Exit">
-            <i class="ag-icon icon-call-ends"></i>
-          </span>
-          <span class="ag-btn videoControlBtn" title="Enable/Disable Video">
-            <i class="ag-icon icon-camera"></i>
-            <i class="ag-icon icon-camera-off"></i>
-          </span>
-          <span class="ag-btn audioControlBtn" title="Enable/Disable Audio">
-            <i class="ag-icon icon-mic"></i>
-            <i class="ag-icon icon-mic-off"></i>
-          </span>
-          <span class="ag-btn shareScreenBtn" title="Share Screen">
-            <i class="ag-icon icon-screen-share"></i>
-          </span>
-          <span class="ag-btn displayModeBtn" title="Switch Display Mode">
-            <i class="ag-icon icon-switch-layout"></i>
-          </span>
-          <!-- <span class="ag-btn ctrlBtn" title="Control">
-            <i class="ag-icon icon-ctrl"></i>
-          </span> -->
-          <!-- <span class="ag-btn disableRemoteBtn" title="Hide/Show Remote Stream">
-            <i class="ag-icon icon-visible"></i>
-            <i class="ag-icon icon-invisible"></i>
-          </span> -->
-          <!-- <span class="ag-btn inviteBtn"></span>
-            <span class="ag-btn shareBtn"></span> -->
+          <!-- btn group -->
+          <div class="ag-btn-group">
+            <span class="ag-btn exitBtn" title="Exit">
+              <i class="ag-icon icon-call-ends"></i>
+            </span>
+            <span class="ag-btn videoControlBtn" title="Enable/Disable Video">
+              <i class="ag-icon icon-camera"></i>
+              <i class="ag-icon icon-camera-off"></i>
+            </span>
+            <span class="ag-btn audioControlBtn" title="Enable/Disable Audio">
+              <i class="ag-icon icon-mic"></i>
+              <i class="ag-icon icon-mic-off"></i>
+            </span>
+            <span class="ag-btn shareScreenBtn" title="Share Screen">
+              <i class="ag-icon icon-screen-share"></i>
+            </span>
+            <span class="ag-btn displayModeBtn" title="Switch Display Mode">
+              <i class="ag-icon icon-switch-layout"></i>
+            </span>
+            <!-- <span class="ag-btn ctrlBtn" title="Control">
+              <i class="ag-icon icon-ctrl"></i>
+            </span> -->
+            <!-- <span class="ag-btn disableRemoteBtn" title="Hide/Show Remote Stream">
+              <i class="ag-icon icon-visible"></i>
+              <i class="ag-icon icon-invisible"></i>
+            </span> -->
+            <!-- <span class="ag-btn inviteBtn"></span>
+              <span class="ag-btn shareBtn"></span> -->
+          </div>
+        </div>
+
+        <div class="document">
+          <iframe src="https://docs.google.com/document/d/1dCbceTlBHXvnn8-Lmxgq6gQNzqo06BrEWcKUgUxbbIU/edit?ts=5e48f3f5" width="100%" height="100%"></iframe>
         </div>
       </div>
-
     </div>
+
     <div class="ag-footer">
       <a class="ag-href" target="_blank" href="https://www.agora.io">
         <span>Powered By Agora</span>
